force-app/main/default/objects/CommercientSF__ArTrnDetail__c/CommercientSF__ArTrnDetail__c.object-meta.xml
<CustomObject>
    <label>Syspro AR Movements</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AR Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>