force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__AbcUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AbcUpd__c</fullName>
    <label>ABC Analysis updated flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>