force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__AccountConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountConvRate__c</fullName>
    <label>Account conversion rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>