force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Bin__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Bin__c</fullName>
    <label>Bin location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>