force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__ContractPrcNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ContractPrcNum__c</fullName>
    <label>Contract number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>