force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__ControlType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ControlType__c</fullName>
    <label>Control type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>