force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__CostGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostGlCode__c</fullName>
    <label>Cost G/L Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>