force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Customer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Customer__c</fullName>
    <label>Customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>