force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerClass__c</fullName>
    <label>Customer class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>