force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__CustomerPoNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerPoNumber__c</fullName>
    <label>Customer p/order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>