force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__DetailLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DetailLine__c</fullName>
    <label>Detail line</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>