force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__DiscountGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscountGlCode__c</fullName>
    <label>Discount G/L Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>