force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DocumentType__c</fullName>
    <label>Document type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>