force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__EecInvoiceFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EecInvoiceFlag__c</fullName>
    <label>EEC invoice flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>