force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlDistrUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlDistrUpd__c</fullName>
    <label>Ledger distribution updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>