force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlIntPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntPeriod__c</fullName>
    <label>G/L period number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>