force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlIntPrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntPrinted__c</fullName>
    <label>G/L Intergration printed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>