force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlIntUpdated__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntUpdated__c</fullName>
    <label>G/L Intergration updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>