force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlIntYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlIntYear__c</fullName>
    <label>G/L year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>