force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlJournal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlJournal__c</fullName>
    <label>Journal number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>