force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__GlPeriod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlPeriod__c</fullName>
    <label>Ledger posting period</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>