force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__HistoryReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__HistoryReqd__c</fullName>
    <label>History required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>