force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__InterBranchTrf__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterBranchTrf__c</fullName>
    <label>Inter-Branch transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>