force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__InterfaceFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterfaceFlag__c</fullName>
    <label>SYSPRO to SYSPRO export flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>