force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceDate__c</fullName>
    <label>Invoice date</label>
    <type>DateTime</type>
</CustomField>