force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__LineInvoiceDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineInvoiceDisc__c</fullName>
    <label>Invoice line discount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>