force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__LineType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineType__c</fullName>
    <label>Line type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>