force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Mass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Mass__c</fullName>
    <label>line mass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>