force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__NetSalesValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NetSalesValue__c</fullName>
    <label>Net sales value (local)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>