force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__OrderType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderType__c</fullName>
    <label>Order type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>