force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__ProductClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductClass__c</fullName>
    <label>Product class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>