force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__ProductClassUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProductClassUpd__c</fullName>
    <label>Product class updated flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>