force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__QtyInvoiced__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyInvoiced__c</fullName>
    <label>Qty invoiced</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>