force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__SalesGlIntReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesGlIntReqd__c</fullName>
    <label>Include in S/A or G/L flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>