force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderLine__c</fullName>
    <label>Originating sales order line</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>