force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__SalespersonUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalespersonUpd__c</fullName>
    <label>Salesperson updated flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>