force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__SalesTurnOPrted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesTurnOPrted__c</fullName>
    <label>Daily sales turnover flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>