force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__StockCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockCode__c</fullName>
    <label>Stock code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>