force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__StockUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockUpd__c</fullName>
    <label>Update stock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>