force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__SummaryLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SummaryLine__c</fullName>
    <label>Summary line</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>