force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Syspro_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>CommercientSF__ArInvoice__c</referenceTo>
    <relationshipLabel>Syspro AR Movements</relationshipLabel>
    <relationshipName>Syspro_AR_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>