force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxableValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxableValue__c</fullName>
    <label>Tax base value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>