force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxAccount__c</fullName>
    <label>Tax account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>