force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxCodeFst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxCodeFst__c</fullName>
    <label>Federal tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>