force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxStatus__c</fullName>
    <label>Customer tax exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>