force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValue__c</fullName>
    <label>Tax value (local)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>