force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TaxValueFst__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxValueFst__c</fullName>
    <label>Federal tax value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>