force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TranAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TranAnalysisEntry__c</fullName>
    <label>Transaction Analysis entry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>