force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TransactionGlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TransactionGlCode__c</fullName>
    <label>Transaction G/L Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>