force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TriangConvRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TriangConvRate__c</fullName>
    <label>Triangulation rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>