force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TrnMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnMonth__c</fullName>
    <label>Transaction posting month</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>