force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__TrnYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnYear__c</fullName>
    <label>Transaction posting year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>