force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__UserField1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField1__c</fullName>
    <label>User-defined field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>