force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__UserField2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField2__c</fullName>
    <label>User-defined field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>