force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Version__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>