force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__Volume__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Volume__c</fullName>
    <label>line volume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>