force-app/main/default/objects/CommercientSF__ArTrnDetail__c/fields/CommercientSF__WarehouseAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WarehouseAccount__c</fullName>
    <label>Warehouse account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>